[package]
name = "nitor-vault-pyo3"
version = "0.1.0"
edition = "2021"

[lib]
name = "nitor_vault"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.91"
nitor-vault = { path = "../rust" }
pyo3 = "0.22.0"
tokio = "1.41.0"

[profile.release]
lto = "thin"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
enum_glob_use = "deny"
unwrap_used = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
