# Copyright 2017-2023 Nitor Creations Oy
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = nitor-vault
version = 0.54
author = Pasi Niemi
author_email = pasi@nitor.com
license = Apache 2.0
description = Vault for storing locally encypted data in S3 using KMS keys
description_file = README.md
url = http://github.com/NitorCreations/vault
download_url = https://github.com/NitorCreations/vault/tarball/0.54
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = n_vault
zip_safe = False
install_requires =
    threadlocal-aws>=0.10
    requests
    argcomplete
    future
    cryptography
    win-unicode-console;platform_system=='Windows'
    wmi;platform_system=='Windows'
    pypiwin32;platform_system=='Windows'
include_package_data = True
tests_require =
    coverage
    coveralls

[options.entry_points]
console_scripts = vault=n_vault.cli:main

[flake8]
max-line-length = 120
max-complexity = 12
# E203 = Whitespace before ':'. Needed for Black compatibility
# C901 = Function is too complex
extend-ignore = E203, C901
exclude =
    .git/,
    .idea/,
    .venv/,
    .vscode/,
    __init__.py,
    __pycache__,
    build/,
    dist/
    venv*/,
