[package]
name = "nitor-vault"
version = "1.4.0"
edition = "2021"
description = "Encrypted AWS key-value storage utility."
license = "Apache-2.0"
repository = "https://github.com/nitorcreations/vault"
keywords = ["secrets", "s3", "cli"]
authors = [
    "Kalle Ahlström <kalle.ahlstrom@nitor.com",
    "Akseli Lukkarila <akseli.lukkarila@nitor.com>",
]

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.90"
aws-config = { version = "1.5.8", features = ["behavior-version-latest"] }
aws-sdk-cloudformation = "1.51.1"
aws-sdk-kms = "1.47.0"
aws-sdk-s3 = "1.57.0"
aws-sdk-sts = { version = "1.46.0", features = ["behavior-version-latest"] }
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive", "env"] }
colored = "2.1.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }

[[bin]]
name = "vault"
path = "src/main.rs"

[profile.release]
lto = "thin"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
enum_glob_use = "deny"
unwrap_used = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
